# wei-data-shu

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-17-package-architecture-design.md
tests/: test_ai_domain.py  test_database_domain.py  test_docs_domain.py  test_excel_domain.py  test_files_domain.py  test_mail_domain.py  test_root_package.py  test_text_domain.py  test_utils.py  test_utils_cli.py  test_utils_domain.py
wei_data_shu/: __init__.py  __main__.py  _api.py  chartsManager.py  cli.py  excelManager.py
wei_data_shu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wei_data_shu/ai/: __init__.py  chatbot.py
wei_data_shu/database/: __init__.py  mysql.py
wei_data_shu/docs/: __init__.py  workflow.py
wei_data_shu/excel/: __init__.py  _helpers.py  client.py  handler.py  manager.py  operations.py  quick.py
wei_data_shu/files/: __init__.py  manager.py
wei_data_shu/mail/: __init__.py  report.py
wei_data_shu/text/: __init__.py  _deps.py  analysis.py  combiner.py  core.py  forecast.py
wei_data_shu/utils/: __init__.py  colors.py  passwords.py  timing.py
wei_office_simptool/: __init__.py  chartsManager.py
wei_office_simptool.egg-info/: PKG-INFO
wei_office_simptool/database/: __init__.py
wei_office_simptool/text/: __init__.py  _deps.py
