[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wei-data-shu"
version = "0.3.2"
description = "Minimal data analysis techniques library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Ethan Wilkins", email = "thisluckyboy@126.com"}
]

dependencies = [
  "pandas",
  "openpyxl",
  "toml",
  "mysql-connector-python",
  "requests"
]

[project.optional-dependencies]
analysis = [
  "numpy",
  "matplotlib",
  "statsmodels",
  "jieba",
  "wordcloud"
]
excel-client = [
  "xlwings"
]

[project.urls]
Homepage = "https://github.com/phoenixlucky/wei-data-shu"

[tool.setuptools.packages.find]
where = ["."]
include = ["wei_data_shu*"]
exclude = ["tests*", "build*", "dist*", "*.egg-info*"]
