[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wei-data-shu"
version = "0.5.0"
description = "Domain-oriented office automation and data utility toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Ethan Wilkins", email = "thisluckyboy@126.com"}
]
keywords = ["office", "excel", "mysql", "email", "automation", "utilities"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "pandas",
  "openpyxl",
  "toml",
  "mysql-connector-python",
  "requests"
]

[project.optional-dependencies]
analysis = [
  "numpy",
  "matplotlib",
  "statsmodels",
  "jieba",
  "wordcloud"
]
excel-client = [
  "xlwings"
]

[project.urls]
Homepage = "https://github.com/phoenixlucky/wei-data-shu"
Repository = "https://github.com/phoenixlucky/wei-data-shu"
Issues = "https://github.com/phoenixlucky/wei-data-shu/issues"
Changelog = "https://github.com/phoenixlucky/wei-data-shu/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["wei_data_shu*"]
exclude = ["tests*", "build*", "dist*", "*.egg-info*"]
